fix nasa meatball logo not scaling on ie 9-11.

--- a/resources/assets/styles/layouts/_header.scss
+++ b/resources/assets/styles/layouts/_header.scss
@@ -94,20 +94,38 @@
 }
 
 .usa-logo {
+  // fixes nasa meatball in logo not scaling on ie 9-11.
+  // todo: move these to nasawds and remove from here.
+  /*
+   * Let's target IE to respect aspect ratios and sizes for img tags containing SVG files
+   * [1] IE9
+   * [2] IE10+
+   */
+  // 1
+  img[src*=".svg"] {
+    width: 500px\9; 
+  }
+  // 2
+  @media screen and (min-width:0\0) {
+    img[src*=".svg"] {
+      width: 500px; 
+    }
+  }
+  
   img {
     vertical-align: middle;
-    width: 40px;
+    width: 40px !important;
     margin-right: 5px;
     position: relative;
     top: -2px;
     @include media($nav-width) {
       transition: all .3s;
       top: -8px;
-      width: 85px;
+      width: 85px !important;
       margin-right: 15px;
       float: left;
       .show-logo & {
-        width: 55px;
+        width: 55px !important;
         top: -2px;
       }
     }
